--- a/index.html
+++ b/index.html
@@ -1,13 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Crystian Oliveira</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <div>
+            <img src="https://github.com/Crystian-Oliveira.png" alt="Foto de Crystian Oliveira Sorrindo">
+        </div>
+    </header>
+
+    <main>
+
+        <section>
+            <div>
+                <h2>Meus jogos</h2>
+                <p>Os games que eu mais curto jogar</p>
+
+                <ul>
+                    <li> 
+                        <a href="https://www.twitch.tv/directory/game/FIFA%2022" target="_blank">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/1869092879_IGDB-285x380.jpg" alt=""> </a>
+                    </li>
+
+                    <li> 
+                        <a href="https://www.twitch.tv/directory/game/NBA%202K23" target="_blank">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/772421245_IGDB-285x380.jpg" alt=""> </a>
+                    </li>
+
+                    <li> 
+                        <a href="https://www.twitch.tv/directory/game/F1%20Manager%202022" target="_blank">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/489490035_IGDB-285x380.jpg" alt=""> </a>
+                    </li>
+
+                   
+                </ul>
+            </div>
+        </section>
+
+
+
+
+
+
+
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
