--- a/index.html
+++ b/index.html
@@ -44,6 +44,58 @@
             </div>
         </section>
 
+        <section>
+            <div>
+                <h2>Canais e stremers</h2>
+                <p>Lista de canais e transmissões que eu não perco!</p>
+
+                <ul class="channel-list">
+                    <li> 
+                        <a href="https://www.twitch.tv/microsoftdeveloper" target="_blank">
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/a8c5ce81-d5d8-411e-bd86-6ae7d1449d02-profile_image-150x150.png" alt=""> </a>
+                    </li>
+
+                    <li> 
+                        <a href="https://www.twitch.tv/nasa" target="_blank">
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/nasa-profile_image-739106d9e1948b76-150x150.png" alt=""> </a>
+                    </li>
+
+                    <li> 
+                        <a href="https://www.twitch.tv/samsungus" target="_blank">
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/4fed49b9-d7b6-4654-bbdf-e5a4063aea5c-profile_image-150x150.png" alt=""> </a>
+                    </li>
+
+                   
+                </ul>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <h2>Minhas redes</h2>
+                <p>Se conecte comigo agora mesmo</p>
+
+                <ul class="social-list">
+                    <li> 
+                        <a href="" target="_blank">
+                            <img src="" alt=""> </a>
+                    </li>
+
+                    <li> 
+                        <a href="" target="_blank">
+                            <img src="" alt=""> </a>
+                    </li>
+
+                    <li> 
+                        <a href="" target="_blank">
+                            <img src="" alt=""> </a>
+                    </li>
+
+                   
+                </ul>
+            </div>
+        </section>
+
 
 
 
