--- a/filmes.html
+++ b/filmes.html
@@ -14,6 +14,8 @@
         <div>
             <img src="https://github.com/Crystian-Oliveira.png" alt="Foto de Crystian Oliveira Sorrindo">
         </div>
+        <button id="new-page"><a href="index.html"> Jogos</a></button>
+
     </header>
 
     <main>
@@ -47,7 +49,7 @@
         <section>
             <div>
                 <h2>Séries</h2>
-                <p>Lista das melhores que já assiti!</p>
+                <p>Lista das melhores que me recordo!</p>
 
                 <ul class="series-list">
                     <li> 
