--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div>
             <img src="https://github.com/Crystian-Oliveira.png" alt="Foto de Crystian Oliveira Sorrindo">
         </div>
+
+        <button id="new-page"><a href="filmes.html"> Filmes</a></button>
     </header>
 
     <main>
