troca de button para li

--- a/filmes.html
+++ b/filmes.html
@@ -14,8 +14,10 @@
         <div>
             <img src="https://github.com/Crystian-Oliveira.png" alt="Foto de Crystian Oliveira Sorrindo">
         </div>
-
-             <button id="new-page"><a href="index.html"> Jogos</a></button>
+        <ul>
+           <li id="new-page"><a href="index.html"> Jogos</a></li>
+        </ul>
+             
         
     </header>
 
