--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <img src="https://github.com/Crystian-Oliveira.png" alt="Foto de Crystian Oliveira Sorrindo">
         </div>
 
-        <button id="new-page"><a href="filmes.html"> Filmes</a></button>
+        <ul>
+            <li id="new-page"><a href="filmes.html"> Filmes</a></li>
+         </ul>
     </header>
 
     <main>
