--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <ul>
-           <a href="filmes.html"> <li id="new-page"> Filmes</a></li>
+           <li><a href="filmes.html"> <li id="new-page"> Filmes</a></li>
          </ul>
     </header>
 
