lista de canais

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <section>
             <div>
-                <h2>Canais e stremers</h2>
+                <h2>Canais</h2>
                 <p>Lista de canais e transmissões que eu não perco!</p>
 
                 <ul class="channel-list">
